Fix form footer form text not being visible when focused

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1221,12 +1221,13 @@ a.blog-back-home {
         }
         fieldset {
             input {
-                color: @color-swatch4;
+                background-color: #fff;
+                color: #302f43;
                 height: 50px;
                 width: 50%;
                 text-indent: 12px;
                 &:focus, &:active {
-                    color: @color-swatch5;
+                    color: #302f43;
                 }
                 @media @tablet {
                     width: 65%;
